# Time-Series-Classification-with-Recurrent-Networks

./: .gitignore  README.md  pyproject.toml  requirements.txt
data/: README.txt  info.labels
data/testing/: biceps_flexion.5qtndq4i.ingestion-6989696b74-gmdv9.json  biceps_flexion.5qtne8ja.ingestion-6989696b74-xkxm9.json  biceps_flexion.5qtnep1i.ingestion-6989696b74-ncsm4.json  biceps_flexion.5qtnfa62.ingestion-6989696b74-gmdv9.json  biceps_flexion.5qtng5m4.ingestion-6989696b74-xkxm9.json  hello_with_hand.5qtp2fbh.ingestion-6989696b74-gmdv9.json  hello_with_hand.5qtp2tbi.ingestion-6989696b74-xkxm9.json  hello_with_hand.5qtp458m.ingestion-6989696b74-gmdv9.json  hello_with_hand.5qtp4ls2.ingestion-6989696b74-xkxm9.json  hello_with_hand.5qtp5ti0.ingestion-6989696b74-gmdv9.json  info.labels  squat.5qtmueee.ingestion-6989696b74-gmdv9.json  squat.5qtmv3j7.ingestion-6989696b74-xkxm9.json  squat.5qtmvmlo.ingestion-6989696b74-ncsm4.json  squat.5qtn0bhg.ingestion-6989696b74-gmdv9.json  squat.5qtn0rb3.ingestion-6989696b74-xkxm9.json  wrist_rotation.5qto79th.ingestion-6989696b74-gmdv9.json  wrist_rotation.5qto7ofi.ingestion-6989696b74-xkxm9.json  wrist_rotation.5qto8tg6.ingestion-6989696b74-gmdv9.json  wrist_rotation.5qto9df4.ingestion-6989696b74-xkxm9.json  wrist_rotation.5qtob9qo.ingestion-6989696b74-xkxm9.json
data/training/: biceps_flexion.5qtn4ivj.ingestion-6989696b74-xkxm9.json  biceps_flexion.5qtn5c53.ingestion-6989696b74-ncsm4.json  info.labels  (+58 more)
docs/: Context_RNN_IA_Classification_Task.md
notebooks/: 00_RNN-IA-Classification_Task.ipynb
