[project]
name = "time-series-classification-with-recurrent-networks"
version = "0.1.0"
description = "train and compare different recurrent neural network models."
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "ipykernel>=6.29.5",
    "pandas>=2.2.3",
    "requests>=2.32.3",
    "scikit-learn>=1.6.1",
    "tensorflow>=2.19.0",
    "numpy==1.26.4",
]
